# kafka_project

kafka_app/: dockercompose.yml  pyproject.toml
